src/objects/feed/_feed.scss
/**
 * Medium Widget
 */

// Dependencies
@import 'config/variables';


// Declarations
.o-feed__header {
  display: flex;
  align-items: center;
  padding-bottom: map-get(map-get($variables, 'padding'), 2);
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-color: inherit;
}

.o-feed__avatar {
  display: inline-block;
  width: 50px;
  border-radius: 1000px;
  overflow: hidden;
  margin-right: map-get(map-get($variables, 'margin'), 1);
}

.c-feed-item {
  margin-top: map-get(map-get($variables, 'margin'), 4);
  padding-bottom: map-get(map-get($variables, 'padding'), 4);
  border-bottom-width: 1px;
  border-bottom-style: solid;
  border-color: inherit;
  box-sizing: border-box;
  &:last-of-type {
    border-bottom: none;
  }
}

.c-feed-item__thumbnail {
  background-position: center center;
  background-size: contain;
  background-repeat: no-repeat;
  margin-top: map-get(map-get($variables, 'margin'), 3);
}

.c-feed-item__excerpt {
  font-size: inherit;
  margin-top: map-get(map-get($variables, 'margin'), 3);
}

// Column Layouts
[class*='o-feed--'][class*='-column'] {
  .o-feed__items {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    &:after {
      content: '';
      flex: auto;
    }
  }
  .c-feed-item {
    display: flex;
    flex-direction: column;
    border-bottom: none;
  }
  .c-feed-item__thumbnail {
    order: -1;
    margin-top: 0;
    background-size: cover;
    background-position: center center;
    border: 1px solid;
  }
}

.o-feed--3-column {
  .c-feed-item,
  .o-feed__items:after {
    flex: 0 0 31%;
    max-width: 31%;
    flex: 0 0 calc(33.33% - 12px);
    max-width: calc(33.33% - 12px);
  }
}

.o-feed--2-column {
  .c-feed-item,
  .o-feed__items:after {
    flex: 0 0 49%;
    max-width: 49%;
    flex: 0 0 calc(50% - 12px);
    max-width: calc(50% - 12px);
  }
}

/**
 * Utilities
 */

.fs-inherit {
  font-size: inherit !important
}

.ws-unset {
  white-space: unset !important
}

